# colmap_neus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
cneus/: __init__.py  config.py  primitives.py
cneus/datasets/: __init__.py  colmap.py  dataset_base.py  dtu.py  scannet.py  tnt_outdoor.py  utils.py
cneus/models/: __init__.py  embedder.py  neus.py  scatter.py  sh.py
cneus/utils/: __init__.py  clustering.py  geometry.py  lr_scheduler.py  mesh.py  misc.py  run_cmd.py  vis.py
configs/: default_colmap.yaml  default_dtu.yaml
cpp/include/: data_spec.hpp  scatter_kernel.cuh
cpp/src/: bindings.cpp  marching_rays_kernel.cu  scatter_kernel.cu
preprocess_data/: clip_video.py  colmap_utils.py  preprocess_data.py  process_data_utils.py  rescale_and_mask.py
scripts/: inference.py  train_colmap.py
